# metal-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
examples/: example.py  example_async.py
src/: __init__.py
src/metal/: metal.py
src/metal-python_Metal_io/: metal.py
src/metal_python_Metal_io/: metal.py
src/metal_sdk/: metal.py  metal_async.py  motorhead.py  motorhead_async.py  typings.py
tests/: test_metal.py  test_metal_async.py  test_motorhead.py  test_motorhead_async.py
tests/fixtures/: sample.csv
