[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metal_sdk"
version = "2.2.2"
authors = [
  { name="Metal Technologies Inc", email="james@getmetal.io" },
]
description = "SDK for getmetal.io"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "httpx",
    "typing_extensions",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
"Github" = "https://github.com/getmetal/metal-python"
